[gd_scene load_steps=8 format=2]

[ext_resource path="res://Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Main.gd" type="Script" id=2]
[ext_resource path="res://Fly.tscn" type="PackedScene" id=3]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=4]

[sub_resource type="Gradient" id=2]
colors = PoolColorArray( 0.027451, 0.231373, 0.266667, 1, 0.705882, 0.905882, 0.858824, 1 )

[sub_resource type="GradientTexture2D" id=3]
gradient = SubResource( 2 )
fill_from = Vector2( 1, 0 )
fill_to = Vector2( 0, 1 )

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -1, 0, 0, 0, 0, 0, 473, 3, 0, 0, 0, 0, 475, 719, 0, 0, 0, 0, -6, 719, 0, 0, 0, 0, -1, 0 )
}

[node name="Main" type="Node"]
script = ExtResource( 2 )
fly_scene = ExtResource( 3 )

[node name="ColorRect" type="TextureRect" parent="."]
margin_right = 480.0
margin_bottom = 720.0
texture = SubResource( 3 )
expand = true

[node name="Player" parent="." instance=ExtResource( 1 )]

[node name="FlyTimer" type="Timer" parent="."]
wait_time = 0.3

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StartPosition" type="Position2D" parent="."]
position = Vector2( 240, 450 )

[node name="FlyPath" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="SpawnLocation" type="PathFollow2D" parent="FlyPath"]
position = Vector2( -1, 0 )
rotation = 0.00632903

[node name="HUD" parent="." instance=ExtResource( 4 )]

[connection signal="hit" from="Player" to="." method="game_over"]
[connection signal="timeout" from="FlyTimer" to="." method="_on_FlyTimer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
